libPlugins: Cleanup code